@@ -1,8 +1,11 @@
 ebus Daemon (ebusd) - NEWS
 ==========================
 
+2013-05-25:
+* Added ability to reopen temporary removed serial device. (thx aloz77 / KNX Forum)
+
 2013-05-16:
-* Added ability to restrict tcp connection to localhost. (thx Alexey Ozerov)
+* Added ability to restrict tcp connection to localhost. (thx aloz77 / KNX Forum)
 
 2013-04-27:
 * Improved csv files read in a way that ebus parts are not case sensitive.
